--- a/src/style.scss
+++ b/src/style.scss
@@ -125,3 +125,44 @@ header {
     }
   }
 }
+
+// ADD JOB
+
+.add-page {
+  min-height: 90vh;
+  display: grid;
+  place-items: center;
+}
+
+.add-sec {
+  width: 70vw;
+  max-width: 700px;
+  box-shadow: 0 0 55px rgb(226, 68, 160);
+  padding: 25px;
+
+  form {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+
+    div {
+      display: flex;
+      flex-direction: column;
+    }
+
+    div input,
+    div select {
+      padding: 10px 15px;
+      margin-top: 5px;
+      border-radius: 5px;
+      font-family: "Poppins";
+    }
+
+    div:last-child {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+}
